; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-form.c_pdf_field_set_button_caption.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-form.c_pdf_field_set_button_caption.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PDF_WIDGET_TYPE_BUTTON = common dso_local global i64 0, align 8
@MK = common dso_local global i32 0, align 4
@CA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pdf_field_set_button_caption(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i64 @pdf_field_type(i32* %8, i32* %9)
  %11 = load i64, i64* @PDF_WIDGET_TYPE_BUTTON, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %28

13:                                               ; preds = %3
  %14 = load i32*, i32** %4, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = call i32* @pdf_new_text_string(i32* %14, i8* %15)
  store i32* %16, i32** %7, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = load i32*, i32** %7, align 8
  %20 = load i32, i32* @MK, align 4
  %21 = call i32 @PDF_NAME(i32 %20)
  %22 = load i32, i32* @CA, align 4
  %23 = call i32 @PDF_NAME(i32 %22)
  %24 = call i32 @pdf_dict_putl_drop(i32* %17, i32* %18, i32* %19, i32 %21, i32 %23, i32* null)
  %25 = load i32*, i32** %4, align 8
  %26 = load i32*, i32** %5, align 8
  %27 = call i32 @pdf_field_mark_dirty(i32* %25, i32* %26)
  br label %28

28:                                               ; preds = %13, %3
  ret void
}

declare dso_local i64 @pdf_field_type(i32*, i32*) #1

declare dso_local i32* @pdf_new_text_string(i32*, i8*) #1

declare dso_local i32 @pdf_dict_putl_drop(i32*, i32*, i32*, i32, i32, i32*) #1

declare dso_local i32 @PDF_NAME(i32) #1

declare dso_local i32 @pdf_field_mark_dirty(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
